# graffine

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md
.github/workflows/: cmake.yml
docs/: CMakeLists.txt  conf.py  doxyfile.in  index.rst
examples/: CMakeLists.txt
examples/create_merge_components/: main.cpp
include/graffine/: definitions.h  property.h
include/graffine/structure/: common.h
include/graffine/structure/analyzers/: adjacency.h  connectivity.h  integral_tests.h
include/graffine/structure/containers/: chain_indexes.h  chains.h  components.h  edges.h  edges_in_component.h  edges_in_graph.h  neigs.h  sequence.h  triangles.h  vertices.h  vertices_in_graph.h
include/graffine/structure/descriptors/: bulk.h  edge_in_component.h  edge_in_graph.h  edge_in_vertex.h  end.h  id.h  slot.h  vertex_degrees.h  vertex_in_graph.h
include/graffine/structure/elements/: chain.h  component.h  edge.h  facet.h  graph.h  vertex.h
include/graffine/structure/io/: io.h  ply.h
include/graffine/structure/modifiers/: graph_factory.h  junction_shifter.h
include/graffine/structure/paths/over_edges/: distance.h  generic.h
include/graffine/structure/paths/over_endslots/: distance.h  generic.h
include/graffine/transforms/: common.h
include/graffine/transforms/component_creation/: functor.h
include/graffine/transforms/component_deletion/: functor.h
include/graffine/transforms/edge_creation/: common.h  in_existing_chain.h  in_new_chain.h
include/graffine/transforms/edge_deletion/: common.h  deleting_host_chain.h  functor.h  in_multi_edge_chain.h  in_single_edge_chain.h  preserving_host_chain.h
include/graffine/transforms/edge_merger/: functor.h
include/graffine/transforms/edge_split/: functor.h
include/graffine/transforms/pulling/: common.h  functor.h  functor_base.h  on_1.h  on_2.h  on_3.h  path.h  reporter.h
include/graffine/transforms/vertex_merger/: common.h  core.h  from_11.h  from_12.h  from_13.h  from_1N.h  from_22.h  from_2N.h  functor.h  reporter.h
include/graffine/transforms/vertex_split/: common.h  functor.h  reporter.h  to_11.h  to_12.h  to_13.h  to_22.h
include/graffine/utils/: colorcodes.h  constants.h  io.h  logger.h  misc.h  msgr.h
include/graph-mutator/: definitions.h
include/graph-mutator/structure/: component.h
include/graph-mutator/structure/basic/: chain.h  chain_collection.h  chain_indexes.h  component.h  edge.h  ends.h  graph.h  integral_tests.h  io.h  neigs.h  slot.h  world.h
include/graph-mutator/transforms/component_creation/: functor.h
include/graph-mutator/transforms/component_deletion/: functor.h
include/graph-mutator/transforms/edge_creation/: in_existing_chain.h  in_new_chain.h
include/graph-mutator/transforms/edge_deletion/: deleting_host_chain.h  preserving_host_chain.h
include/graph-mutator/transforms/pulling/: common.h  functor_base.h  on_1.h  on_2.h  on_3.h  paths.h
include/graph-mutator/transforms/vertex_merger/: core.h  from_00.h  from_10.h  from_11.h  from_12.h  from_13.h  from_20.h  from_22.h  log.h
include/graph-mutator/transforms/vertex_split/: log.h  to_11.h  to_13.h  to_1B.h  to_BB.h
tests/: CMakeLists.txt  adjacency.cpp  chain.cpp  common.h  component.cpp  component_creation_deletion.cpp  edge.cpp  edge_creation.cpp  edge_deletion.cpp  graph.cpp  io.cpp  paths.cpp  pulling.h  pulling_1.cpp  pulling_2.cpp  pulling_3.cpp  sample_graph.h  vertex_merger.cpp  vertex_merger_11.cpp  vertex_merger_12.cpp  vertex_merger_13.cpp  vertex_merger_22.cpp  vertex_merger_common.h  vertex_merger_core.cpp  vertex_split.cpp  vertex_split_11.cpp  vertex_split_12.cpp  vertex_split_13.cpp  vertex_split_22.cpp  vertex_split_common.h  vertices.cpp
(+9 files in other folders)
